--- a/CSS/design.css
+++ b/CSS/design.css
@@ -41,14 +41,6 @@ h6 {
 a {
     text-decoration: none;
   }
-.hr-newline{
-    background: none;
-    clear: both;
-    outline: 0;
-}
-.br-newline{
-    clear: both;
-}
 
 /* ----------- Images ------------------- */
 .img-l {
@@ -101,42 +93,48 @@ li:not(ul.nav li){
 
 
 /*---------------CODE ELEMENTS-------------*/
-pre {
-    counter-reset: line-number; 
-    border-radius: 1em; 
-    overflow: auto; 
+pre.line-numbers {
+    display: flex;
+    flex-direction: column;
+    width: 100% !important;
+    box-sizing: border-box !important;
+    border-radius: 1em !important;
+    overflow: auto !important; 
     user-select: none;
-}
-pre code {
-    padding-left: 3em; 
+    padding: 1em !important;
+    margin: 1em 0em !important;
+    position: relative;
+}  
+pre.line-numbers code {
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
+    padding-left: 4em; 
     margin-top: 0;
     display: block;
     font-family: 'Courier New', Courier, monospace; 
-    margin: 0; 
-    line-height: 0.5; 
+    line-height: 1.4; 
+    counter-reset: line;
 }
-pre code span::before {
-    padding-left: 3em;
-    counter-increment: line-number; 
-    content: counter(line-number); 
-    display: inline-block;
-    width: 2.5em; 
-    margin-left: -3em; 
-    padding-right: 1.5em; 
+pre.line-numbers .line-numbers-rows {
+    box-sizing: border-box;
+    position: absolute;
+    pointer-events: none;
+    left: 0;
+    user-select: none;
 }
-pre code span {
-    display: block;
-    margin: 0; 
-    padding: 0; 
-}
-pre .code-title {
-    padding-left: 0.8em;
-    position: inline-block; 
-    top: 0.1em; 
-    left: 0.1em; 
+pre.line-numbers .code-title {
+    padding-left: -5em;
+    padding-bottom: 1em;
     font-family: 'Courier New', Courier, monospace; 
     font-weight: bold; 
+} 
+pre.line-numbers .line-numbers-rows > * {
+    line-height: 1.4 !important;
+    height: 1.4em !important;
+    display: block !important;
 }
+
+
 
 
 
